# mttst

./: README.md  template.md
cpp-app/: .gitignore  CMakeLists.txt  test.cpp
dextool/: .dextool_mutate.toml  .gitignore  README.md  build.sh  test.sh
dextool-catch2/: .dextool_mutate.toml  CMakeLists.txt  README.md  mathz.cpp  test.cpp
dextool-mull/: .dextool_mutate.toml  .gitignore  CMakeLists.txt  README.md  mull.yml
dextool-mull/src/: geometry.cpp  main.cpp  mathz.cpp  zorter.cpp
dextool-mull/test/: test_geometry.cpp  test_mathz.cpp  test_zorter.cpp
dextool/src/: main.cpp
dextool/test/: test_mathz.cpp
mull/: .gitignore  CMakeLists.txt  README.md  hello-world  main.cpp  mull.yml
mull-cpp-app/: mathz.cpp  test.cpp
mull-math-demo/: .gitignore  CMakeLists.txt  main.cpp  math_utils.cpp  math_utils.h  tests.cpp
mull/src/: mathz.cpp
mull/test/: test_geometry.cpp
mutmut/: .gitignore  README.md  main.py  mathz.py  requirements.txt  setup.cfg
mutmut/example-report/: junit.xml
mutmut/example-report/html/: index.html
mutmut/example-report/html/src/: main.py.html  mathz.py.html
mutmut/tests/: test_mathz.py
mutpy/: .gitignore  README.md
mutpy/test/: test_mathz.py
pitest/: .gitignore  README.md  pom.xml
pitest/example-report/pit-reports/: index.html  mutations.csv  mutations.xml
pitest/example-report/pit-reports/com.pitest.app/: App.java.html  Mathz.java.html  index.html
stryker/: .gitignore  Mathz.cs  MathzSuite.sln  Program.cs  README.md  Stryker.sln
stryker-2/: MathLib.sln  README.md
stryker-2/.config/: dotnet-tools.json
stryker-2/example-report/: mutation-report.html
stryker-2/example-report/2024-02-26.15-00-36/reports/: mutation-report.html
stryker-2/src/MathLib/: Addition.cs  Program.cs  Vector.cs
stryker-2/src/MathLib/Util/: NumberUtils.cs  (+1 more)
stryker-2/tests/TestMathLib/: AdditionTest.cs  NumberUtilsTest.cs  SampleTest.cs  StringUtilsTest.cs  TestMathLib.csproj  VectorTest.cs
stryker-2/tests/TestMathzApp/: TestMathzApp.csproj
stryker/StrykerTests/: MathzTests.cs  StrykerTests.csproj
stryker/src/MathzApp/: Mathz.cs  Program.cs
stryker/tests/TestMathzApp/: MathzTests.cs  SampleTest.cs  UnitTest1.cs
(+4 files in other folders)
